[c7dadd6d8557e24db34171d649c7c38f783c77d0]: Added '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce-copy.md' via CloudCannon

--- a/en/index.html
+++ b/en/index.html
@@ -94,6 +94,11 @@
                 </li>
             
                 <li class="doc-title">
+                    <a href="https://developercielo.github.io/en/manual/cielo-ecommerce-copy">Integration Manual</a>
+                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </li>
+            
+                <li class="doc-title">
                     <a href="https://developercielo.github.io/en/tutorial/sdks-cielo">SDKs</a>
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </li>
