[3e02fb23340c44b24f4a868588b83df775716388]: Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco-teste.md' via CloudCannon

--- a/en/manual/risco-teste.html
+++ b/en/manual/risco-teste.html
@@ -382,6 +382,31 @@ curl
       <td> </td>
     </tr>
     <tr>
+      <td>Customer</td>
+      <td> </td>
+      <td> </td>
+      <td>Não</td>
+      <td>Nó contendo os dados do cliente</td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+    </tr>
+    <tr>
       <td>Customer.Name</td>
       <td>Texto</td>
       <td>255</td>
@@ -587,6 +612,31 @@ curl
       <td>-</td>
       <td>Não</td>
       <td>Status de cadastro do comprador na loja.NEW - Cliente novo efetuando a primeira compraEXISTING - Cliente existente</td>
+      <td>Opcional</td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>Customer.Address</td>
+      <td>-</td>
+      <td>-</td>
+      <td>Não</td>
+      <td>Nó contendo dados do Endereço do Comprador.</td>
       <td>Opcional</td>
       <td> </td>
       <td> </td>
@@ -1786,7 +1836,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Define, de acordo com a sequência, se prosseguirá ou não com o fluxo. Valor padrão: AlwaysAlways - Para o fluxo AnalyseFirst, segue com a autorização independente do resultado da análise de fraude. Para o fluxo AuthorizeFirst, segue com a análise de fraude independente do resultado da autorização.OnSuccess - Para o fluxo AnalyseFirst, segue com a autorização somente se a análise de fraude retornar “Accept””. Para o fluxo AuthorizeFirst, segue com a análise de fraude somente se a transação for autorizada.”</td>
+      <td>Define, de acordo com a sequência, se prosseguirá ou não com o fluxo. Valor padrão: AlwaysAlways - Para o fluxo AnalyseFirst, segue com a autorização independente do resultado da análise de fraude. Para o fluxo AuthorizeFirst, segue com a análise de fraude independente do resultado da autorização.OnSuccess - Para o fluxo AnalyseFirst, segue com a autorização somente se a análise de fraude retornar “Accept”. Para o fluxo AuthorizeFirst, segue com a análise de fraude somente se a transação for autorizada.</td>
       <td>Opcional</td>
       <td> </td>
       <td> </td>
