[ba8ff0f5c535832e80e5bac4135dfd5b6125b01a]: Updated '_i18n/en/_posts/api-ecommerce-cielo/2003-03-03-risco-teste.md' via CloudCannon

--- a/en/manual/risco-teste.html
+++ b/en/manual/risco-teste.html
@@ -1160,7 +1160,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Tipo do Produto.AdultContent -  Conteúdo adulto.Coupon - Cupon de desconto.Default - Opção padrão para análise.EletronicGood - Produto eletrônico.EletronicSoftware - Softwares distribuídos eletronicamente via download.GiftCertificate - Vale presente.HandlingOnly - Taxa de instalação ou manuseio.Service - Serviço.ShippingAndHandling - Frete e taxa de instalação ou manuseio.ShippingOnly - Frete.Subscription - Assinatura.</td>
+      <td>Tipo do Produto.<br /> AdultContent -  Conteúdo adulto. <br />Coupon - Cupon de desconto. <br />Default - Opção padrão para análise. <br />EletronicGood - Produto eletrônico. <br />EletronicSoftware - Softwares distribuídos eletronicamente via download. <br />GiftCertificate - Vale presente. <br />HandlingOnly - Taxa de instalação ou manuseio. <br />Service - Serviço.ShippingAndHandling - Frete e taxa de instalação ou manuseio. <br />ShippingOnly - Frete.Subscription - Assinatura.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1210,7 +1210,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível de risco do produto.LOW - O produto tem um histórico de poucos chargebacks. NORMAL - O produto tem um histórico de chargebacks considerado normal. HIGH - O produto tem um histórico de chargebacks acima da média.</td>
+      <td>Nível de risco do produto.LOW - O produto tem um histórico de poucos chargebacks. <br /><strong>Normal</strong> - O produto tem um histórico de chargebacks considerado normal. <br /><strong>high</strong> - O produto tem um histórico de chargebacks acima da média.</td>
       <td>Opcional</td>
       <td> </td>
       <td> </td>
@@ -1360,7 +1360,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível de importância do e-mail e endereços IP dos clientes em risco de pontuação. Valor padrão: OffLow - Baixa importância do e-mail e endereço IP na análise de risco. Normal - Média importância do e-mail e endereço IP na análise de risco. High - Alta importância do e-mail e endereço IP na análise de risco. Off - E-mail e endereço IP não afetam a análise de risco.</td>
+      <td>Nível de importância do e-mail e endereços IP dos clientes em risco de pontuação. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <strong>low</strong> - Baixa importância do e-mail e endereço IP na análise de risco. <br /><strong>Normal</strong> - Média importância do e-mail e endereço IP na análise de risco. <br /><strong>high</strong> - Alta importância do e-mail e endereço IP na análise de risco.  <br /><strong>off</strong> - E-mail e endereço IP não afetam a análise de risco.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1385,7 +1385,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível dos testes realizados sobre os dados do comprador com pedidos recebidos sem sentido. Valor padrão: OffLow - Baixa importância da verificação feita sobre o pedido do comprador, na análise de risco. Normal - Média importância da verificação feita sobre o pedido do comprador, na análise de risco. High - Alta importância da verificação feita sobre o pedido do comprador, na análise de risco.Off - Verificação do pedido do comprador não afeta a análise de risco.</td>
+      <td>Nível dos testes realizados sobre os dados do comprador com pedidos recebidos sem sentido. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <strong>low</strong> - Baixa importância da verificação feita sobre o pedido do comprador, na análise de risco. <br /><strong>Normal</strong> - Média importância da verificação feita sobre o pedido do comprador, na análise de risco. <br /><strong>high</strong> - Alta importância da verificação feita sobre o pedido do comprador, na análise de risco. <br /><strong>off</strong> - Verificação do pedido do comprador não afeta a análise de risco.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1410,7 +1410,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível de obscenidade dos pedidos recebedidos. Valor Padrão: OffLow - Baixa importância da verificação sobre obscenidades do pedido do comprador, na análise de risco.Normal - Média importância da verificação sobre obscenidades do pedido do comprador, na análise de risco. High - Alta importância da verificação sobre obscenidades do pedido do comprador, na análise de risco.Off - Verificação de obscenidade no pedido do comprador não afeta a análise de risco.</td>
+      <td>Nível de obscenidade dos pedidos recebedidos. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <strong>low</strong> - Baixa importância da verificação sobre obscenidades do pedido do comprador, na análise de risco.Normal - Média importância da verificação sobre obscenidades do pedido do comprador, na análise de risco. <br /><strong>high</strong> - Alta importância da verificação sobre obscenidades do pedido do comprador, na análise de risco. <br /><strong>off</strong> - Verificação de obscenidade no pedido do comprador não afeta a análise de risco.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1435,7 +1435,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível dos testes realizados com os números de telefones. Valor padrão: OffLow - Baixa importância nos testes realizados com números de telefone.Normal - Média importância nos testes realizados com números de telefone. High - Alta importância nos testes realizados com números de telefone. Off - Testes de números de telefone não afetam a análise de risco.</td>
+      <td>Nível dos testes realizados com os números de telefones. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <strong>low</strong> - Baixa importância nos testes realizados com números de telefone.Normal - Média importância nos testes realizados com números de telefone. <br /><strong>high</strong> - Alta importância nos testes realizados com números de telefone.  <br /><strong>off</strong> - Testes de números de telefone não afetam a análise de risco.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1460,7 +1460,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível de importância da hora do dia do pedido do cliente. Valor padrão: OffLow - Baixa importância no horário do dia em que foi feita a compra, para a análise de risco. Normal - Média importância no horário do dia em que foi feita a compra, para a análise de risco.High - Alta importância no horário do dia em que foi feita a compra, para a análise de risco. Off - O horário da compra não afeta a análise de risco.</td>
+      <td>Nível de importância da hora do dia do pedido do cliente. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <strong>low</strong> - Baixa importância no horário do dia em que foi feita a compra, para a análise de risco. <br /><strong>Normal</strong> - Média importância no horário do dia em que foi feita a compra, para a análise de risco.High - Alta importância no horário do dia em que foi feita a compra, para a análise de risco.  <br /><strong>off</strong> - O horário da compra não afeta a análise de risco.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1485,7 +1485,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Nível de importância de frequência de compra do cliente. Valor padrão: OffLow - Baixa importância no número de compras realizadas pelo cliente nos últimos 15 minutos.Normal - Média importância no número de compras realizadas pelo cliente nos últimos 15 minutos. High - Alta importância no número de compras realizadas pelo cliente nos últimos 15 minutos.Off - A frequência de compras realizadas pelo cliente não afeta a análise de fraude.</td>
+      <td>Nível de importância de frequência de compra do cliente. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <strong>low</strong> - Baixa importância no número de compras realizadas pelo cliente nos últimos 15 minutos.Normal - Média importância no número de compras realizadas pelo cliente nos últimos 15 minutos. <br /><strong>high</strong> - Alta importância no número de compras realizadas pelo cliente nos últimos 15 minutos. <br /><strong>off</strong> - A frequência de compras realizadas pelo cliente não afeta a análise de fraude.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
@@ -1510,7 +1510,7 @@ curl
       <td>Texto</td>
       <td>-</td>
       <td>Não</td>
-      <td>Flag que avaliará os endereços de cobrança e entrega para difrentes cidades, estados ou países. Valor padrão: OffYes - Em caso de divergência entre endereços de cobrança e entrega, marca com riscopequeno. No - Em caso de divergência entre endereços de cobrança e entrega, marca com riscoalto. Off - Ignora a análise de risco para endereços divergentes.</td>
+      <td>Flag que avaliará os endereços de cobrança e entrega para difrentes cidades, estados ou países. <br /><strong>Valor Padrão:</strong> <strong>off</strong><br /> <br /><strong>YES</strong> - Em caso de divergência entre endereços de cobrança e entrega, marca com riscopequeno.  <br /><strong>No</strong> - Em caso de divergência entre endereços de cobrança e entrega, marca com riscoalto.  <br /><strong>off</strong> - Ignora a análise de risco para endereços divergentes.</td>
       <td>-</td>
       <td> </td>
       <td> </td>
